# markov_chains

./: Cargo.toml  LICENSE  README.md
src/: categorical.rs  lib.rs  markov_chain.rs  stochastic_error.rs  stochastic_matrix.rs
src/markov_chain/: common.rs  dynamic_markov_chain.rs  sealed.rs  static_markov_chain.rs
src/stochastic_matrix/: dynamic_stochastic_matrix.rs  static_stochastic_matrix.rs
tests/: test.rs
